src/snapshots/near_enhanced_api__rpc_calls__tests__nft_list.snap
---
source: src/rpc_calls.rs
expression: nfts
---
Ok(
    [
        NonFungibleToken {
            token_id: "1394",
            owner_account_id: "olenavorobei.near",
            metadata: Some(
                NftItemMetadata {
                    title: Some(
                        "Billionaire Bull #1394",
                    ),
                    description: None,
                    media: Some(
                        "1394.png",
                    ),
                    media_hash: None,
                    copies: None,
                    issued_at: Some(
                        "1646583360766903841",
                    ),
                    expires_at: None,
                    starts_at: None,
                    updated_at: None,
                    extra: None,
                    reference: Some(
                        "1394.json",
                    ),
                    reference_hash: None,
                },
            ),
        },
        NonFungibleToken {
            token_id: "345",
            owner_account_id: "olenavorobei.near",
            metadata: Some(
                NftItemMetadata {
                    title: Some(
                        "Billionaire Bull #345",
                    ),
                    description: None,
                    media: Some(
                        "345.png",
                    ),
                    media_hash: None,
                    copies: None,
                    issued_at: Some(
                        "1646578767534418718",
                    ),
                    expires_at: None,
                    starts_at: None,
                    updated_at: None,
                    extra: None,
                    reference: Some(
                        "345.json",
                    ),
                    reference_hash: None,
                },
            ),
        },
        NonFungibleToken {
            token_id: "100",
            owner_account_id: "olenavorobei.near",
            metadata: Some(
                NftItemMetadata {
                    title: Some(
                        "Billionaire Bull #100",
                    ),
                    description: None,
                    media: Some(
                        "100.png",
                    ),
                    media_hash: None,
                    copies: None,
                    issued_at: Some(
                        "1646577690952187728",
                    ),
                    expires_at: None,
                    starts_at: None,
                    updated_at: None,
                    extra: None,
                    reference: Some(
                        "100.json",
                    ),
                    reference_hash: None,
                },
            ),
        },
        NonFungibleToken {
            token_id: "1475",
            owner_account_id: "olenavorobei.near",
            metadata: Some(
                NftItemMetadata {
                    title: Some(
                        "Billionaire Bull #1475",
                    ),
                    description: None,
                    media: Some(
                        "1475.png",
                    ),
                    media_hash: None,
                    copies: None,
                    issued_at: Some(
                        "1646583705141719710",
                    ),
                    expires_at: None,
                    starts_at: None,
                    updated_at: None,
                    extra: None,
                    reference: Some(
                        "1475.json",
                    ),
                    reference_hash: None,
                },
            ),
        },
    ],
)
