src/snapshots/near_enhanced_api__rpc_calls__tests__nft_metadata_token_does_not_exist.snap
---
source: src/rpc_calls.rs
expression: nft
---
Err(
    Error {
        code: 400,
        message: "Invalid Input: Token `no_such_token` does not exist in contract `x.paras.near`, block_height 68000000",
        retriable: false,
    },
)
